--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <div class="hover-text"  id="hover-text2">text from the SECOND DOT!!!!!</div>
              </div>
 
+             <div class="circle" id="circle2">
+                <div class="hover-text"  id="hover-text2">text from the SECOND DOT!!!!!</div>
+             </div>
+
     </div>
     
     </div>
