newest update with other files

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         
         <div class="circle" id="circle6">
-            <div class="hover-text">redacted text circle 6</div>
+            <div class="hover-text">redacted text circle</div>
         </div>
 
         
