switching around the files and adding in some of media queries

--- a/intro.html
+++ b/intro.html
@@ -12,10 +12,14 @@
 
 
 <body>
-    <div class="container">
-        <a href="page1.html" class="start-link">click to begin</a>
+    <div class="content">
+        <p class="message">
+            Have you ever looked back on childhood memories and come to the realization that you cannot remember some of those fuzzier nostalgic moments? I have lost a lot to my own subconscious mind, but maybe you can help. Relieve and remember with me.
+        </p>
     </div>
+    <a href="page1.html" class="continue-link">continue</a>
 </body>
 </html>
+
 
 
