--- a/page1.html
+++ b/page1.html
@@ -9,12 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
-
-
 <body>
     <div class="content">
-        <p class="message">
-            Have you ever looked back on childhood memories and come to the realization that you cannot remember some of those fuzzier nostalgic moments? I have lost a lot to my own subconscious mind, but maybe you can help. Relieve and remember with me.
+        <p class="message left">
+            
+            The conscious mind is known for being constantly aware of active thoughts and actions. This part is responsible for decision making, responding to the world around us, acknowledging feelings, and interpreting input from our bodies and surroundings. Even now as you are reading this, your conscious mind is adding it to your inner dialogue. These memories are easier to read compared to others you may encounter in the maze.
+
+
+        </p>
+        <p class="message right">
+            Next is the subconscious. This part of the mind is responsible for storing the received information and taking care of things we do not always need to think about doing like breathing. It is where thoughts that do not constantly stay in the forefront of our minds stay. It is the core of our self-being and who we are. Here you will find it is a bit harder to understand memories than other parts of the mind.
         </p>
     </div>
     <a href="page2.html" class="continue-link">continue</a>
