--- a/page3.html
+++ b/page3.html
@@ -12,9 +12,9 @@
 <body>
     <div class="content">
         <p class="message">
-            Lastly, we have the deepest part of the mind: the unconscious. This is where deep recesses of our past and memories lie. Most times we are not even aware of these sorts of things. I would stay within the maze, or it gets pretty dark. We would not want you diving into those deep repressed thoughts and feelings…
+            With all of this in mind (pun intended), help me recollect my past. Use two fingers to move around the screen on a trackpad or drag and click if using a mouse. See if you can come across the memories I have stored. The objective is not to escape, but rather to collect as many hidden memories as you can.
         </p>
     </div>
-    <a href="page4.html" class="continue-link">continue</a>
+    <a href="page4.html" class="continue-link">start collecting memories</a>
 </body>
 </html>
