--- a/page2.html
+++ b/page2.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,11 +12,8 @@
 </head>
 <body>
     <div class="content">
-        <p class="message left">
-            The conscious mind is known for being aware of active thoughts and actions. This part of the mind is responsible for decision making, responding to the world around us, acknowledging feelings, and interpreting input from our body and our surroundings. Even now as you are reading this your conscious mind is adding it to your inner dialogue as we speak… These memories are easier to pull out from the void, as we are not quite into the nitty gritty.
-        </p>
-        <p class="message right">
-            Next is the subconscious. This part of the mind is responsible for storing received information and taking care of things we don’t always need to think about doing like breathing. It’s where thoughts that don’t constantly stay in the forefront of our minds stay. It is part of the core of our self-being and who we are. Here you will find it is a bit harder to navigate than the conscious part of the mind… Some things may be incomplete.
+        <p class="message">
+            Lastly, we have the deepest part of the mind: the unconscious. This is where deep recesses of our past and memories lie. Most times we are not even aware of these sorts of things. I would stay within the maze, or it gets pretty empty as we are not meant to find things here. We would not want you diving into those deep repressed thoughts and feelings…
         </p>
     </div>
     <a href="page3.html" class="continue-link">continue</a>
